control-plane/custom-gateway-api/examples/standard/multicluster/httproute-gamma.yaml
#$ Used in:
#$ - geps/gep-1748.md
kind: HTTPRoute
apiVersion: consul.networking.io/v1beta1
metadata:
  name: store
spec:
  parentRefs:
  - group: multicluster.x-k8s.io
    kind: ServiceImport
    name: store
  rules:
  - matches:
    - path:
        value: "/cart"
    backendRefs:
    - group: multicluster.x-k8s.io
      kind: ServiceImport
      name: cart
